<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_CallNOC"
        android:showAsAction="always"
        android:title="@string/callNoc"> 
    </item>
    
    <item
        android:id="@+id/menu_CallManager"
        android:showAsAction="always"
        android:title="@string/callManager"> 
    </item>
    <item
        android:id="@+id/menu_NotifyToManager"
        android:showAsAction="always"
        android:title="@string/NotifyToManager"> 
    </item>
    <!-- <item
        android:id="@+id/menu_UpdateStatus"
        android:showAsAction="always"
        android:title="@string/UpdateStatus"> 
    </item>
    <item
        android:id="@+id/menu_SetStatus"
        android:showAsAction="always"
        android:title="@string/setStatus"> 
    </item>
 -->
</menu>